update libraries and remove deprecated

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -20,7 +20,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.style.use(\"seaborn-whitegrid\")\n",
+    "plt.style.use(\"seaborn-v0_8-whitegrid\")\n",
     "from sklearn.metrics import roc_auc_score\n",
     "import numpy as np\n",
     "from skshift import ExplanationShiftDetector"
